Validated the html files and correct it

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -20,13 +20,112 @@
 </head>
 
 <body>
+    <!-- For the Developer Copy Start from here  line 148-->
+    <header class="HomePage_header">
+        <h1>
+            <a href="index.html">
+                Home Genie
+            </a>
+        </h1>
+        <div class="Menu_BellIconContainer">
+            <a href="#" id="ShowNotificationPopUp">
+                <i title="Show Notifications" class="fas fa-bell"></i>
+            </a>
+            <a href="#" id="ShowMenu">
+                <i title="Show Menu" class="fas fa-bars"></i>
+            </a>
+        </div>
+        <div class="dk-menu">
+            <a href="#" id="dk-ShowNotificationPopUp">
+                <i title="Show Notifications" class="fas fa-bell"></i>
+            </a>
+            <ul>
+                <li>
+                    <a href="BrowseListings.html">Browse</a>
+                </li>
+                <li>
+                    <a href="">Create new</a>
+                </li>
+                <li>
+                    <a href="">Personal listings</a>
+                </li>
+                <li>
+                    <a href="AboutUs.html">About Us</a>
+                </li>
+                <li>
+                    <a href="#" class="ProfileIcon">
+                        <i title="Profile" class="far fa-user-circle"></i>
+                    </a>
+                    <div class="subProfileMenu">
+                        <ul>
+                            <li>
+                                <a href="UpdateProfile.html">Update Profile</a>
+                            </li>
+                            <li>
+                                <a href="Login.html">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </header>
+
+    <!-- <div class="mb-nav_wrapper"></div> -->
+    <nav class="mb-menu" id="showHideMenu">
+        <ul>
+            <!-- Add Links to the Pages when created -->
+            <li>
+                <a href="BrowseListings.html">Browse Listings</a>
+            </li>
+            <li>
+                <a href="#"> Create New Listing</a>
+            </li>
+            <li>
+                <a href="#">View Your Listing</a>
+            </li>
+            <li>
+                <a href="AboutUs.html">About Us</a>
+            </li>
+            <li>
+                <a href="UpdateProfile.html">
+                    Profile</a>
+            </li>
+            <li>
+                <a href="Login.html"><strong>Logout?</strong></a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="Notification_wrapper">
+        <div class="NotificationPopUpContainer">
+            <div class="NotificationPopUp">
+                <div class="Notification_id1">
+                    <h3>Listing Name</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+                    <div>
+                        <button>View Listing</button>
+                    </div>
+                </div>
+                <div class="Notification_id1">
+                    <h3>Listing Name</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+                    <div>
+                        <button>View Listing</button>
+                    </div>
+                </div>
+            </div>
+            <div class="triangle"></div>
+        </div>
+    </div>
+    <!-- Till here -->
     <div class="about-wrapper">
 
         <main>
             <div class="about-content1">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa?
                     Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
-                <img src="https://picsum.photos/500/500?random=11">
+                <img src="https://picsum.photos/500/500?random=11" alt="Random Image 11">
             </div>
             <div class="desktop-grid">
                 <div class="about-vision">
@@ -98,4 +197,5 @@
 
     <script src="../js/script.js" defer></script>
 </body>
+
 </html>
