--- a/html_Files/Login.html
+++ b/html_Files/Login.html
@@ -26,7 +26,7 @@
                 <header>
                     <h1>LOG IN</h1>
                 </header>
-                <main>
+                <div>
                     <form>
                         <div class="login-email">
                             <label for="login-email"></label>
@@ -49,12 +49,11 @@
                             <span><a href="Signup.html">Sign Up</a></span>
                         </div>
                     </form>
-                </main>
+                </div>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <script src="../js/login.js" defer></script>
 </body>
-<script src="../js/login.js" defer></script>
 
 </html>
