--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -27,7 +27,7 @@
                 <header>
                     <h1>Sign Up</h1>
                 </header>
-                <main>
+                <div>
                     <form>
                         <div class="First_Name">
                             <label for="SignUp_fName"></label>
@@ -49,8 +49,8 @@
                             <label for="SignUp_phoneNumber"></label>
                             <div class="icon_input_wrapper">
                                 <i class="fas fa-user"></i>
-                                <input type="text" id="SignUp_phoneNumber" name="SignUp_phoneNumber" placeholder="Phone Number"
-                                    required>
+                                <input type="text" id="SignUp_phoneNumber" name="SignUp_phoneNumber"
+                                    placeholder="Phone Number" required>
                             </div>
                         </div>
                         <div class="Email">
@@ -86,7 +86,7 @@
                             <p>**Password does not match</p>
                         </div>
                     </form>
-                </main>
+                </div>
             </div>
         </div>
     </main>
