Specific Listing page completed

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
         integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://kit.fontawesome.com/6b1d565c72.js" crossorigin="anonymous"></script>
-
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
@@ -23,39 +21,47 @@
 </head>
 
 <body>
-    <div class="about-wrapper">        
-        
+    <div class="about-wrapper">
+
         <main>
             <div class="about-content1">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa? Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa?
+                    Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
                 <img src="https://picsum.photos/500/500?random=11">
             </div>
             <div class="desktop-grid">
                 <div class="about-vision">
                     <h2>Our Vision</h2>
                     <div class="about-content2">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia amet optio commodi earum consequatur velit eum atque, hic repellat. Autem quo natus itaque doloribus qui, facere deserunt numquam neque assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias sit enim ex nulla laborum, fugiat laudantium consequuntur veritatis blanditiis. Debitis reprehenderit ducimus eius tempore voluptatibus, sed a voluptas corrupti sequi.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nihil eius ut, omnis excepturi quisquam tenetur dicta perspiciatis similique dolore illo magnam tempore soluta consequuntur, ratione nulla nisi officiis. Sunt.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia amet optio commodi earum
+                            consequatur velit eum atque, hic repellat. Autem quo natus itaque doloribus qui, facere
+                            deserunt numquam neque assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Molestias sit enim ex nulla laborum, fugiat laudantium consequuntur veritatis
+                            blanditiis. Debitis reprehenderit ducimus eius tempore voluptatibus, sed a voluptas
+                            corrupti sequi.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                            nihil eius ut, omnis excepturi quisquam tenetur dicta perspiciatis similique dolore illo
+                            magnam tempore soluta consequuntur, ratione nulla nisi officiis. Sunt.</p>
                     </div>
                 </div>
-                    <div class="about-choose">
-                        <h2>Why Choose Us?</h2>
-                        <div class="about-choose-item1">
-                            <span><i class="fa-solid fa-star"></i></span>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </div>
-                        <div class="about-choose-item2">
-                            <span><i class="fa-solid fa-gear"></i></span>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </div>
-                        <div class="about-choose-item3">
-                            <span><i class="fa-solid fa-earth-europe"></i></span>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </div>
-                        <div class="about-choose-item4">
-                            <span><i class="fa-solid fa-location-dot"></i></span>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </div>
+                <div class="about-choose">
+                    <h2>Why Choose Us?</h2>
+                    <div class="about-choose-item1">
+                        <span><i class="fa-solid fa-star"></i></span>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
                     </div>
+                    <div class="about-choose-item2">
+                        <span><i class="fa-solid fa-gear"></i></span>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                    </div>
+                    <div class="about-choose-item3">
+                        <span><i class="fa-solid fa-earth-europe"></i></span>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                    </div>
+                    <div class="about-choose-item4">
+                        <span><i class="fa-solid fa-location-dot"></i></span>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                    </div>
+                </div>
             </div>
             <h2>Our Team</h2>
             <div class="about-team">
@@ -92,7 +98,5 @@
     </div>
 
     <script src="../js/script.js" defer></script>
-
 </body>
-
 </html>
