--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
- <!-- <header>
+  <!-- <header>
     <h1>Home Genie</h1>
   </header>
   <main> <a href="about.html">About</a></main>
@@ -212,7 +212,38 @@
       </div>
     </div>
   </main>
-
+  <footer class="footer_Area">
+    <div class="about-logo">
+      <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+    </div>
+    <div class="about-footer-nav1">
+      <nav>
+        <ul>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Create New Listing</a></li>
+          <li><a href="#">View Your Listing</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="about-footer-nav2">
+      <nav>
+        <ul>
+          <li><a href="#">Terms & Conditions</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Cookie Policy</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="about-footer-nav3">
+      <nav>
+        <ul>
+          <li><a href="#">Let's Get Connected !!</a></li>
+          <li><a href="#">+1 1234567890</a></li>
+          <li><a href="#">abc@homegenie.ca</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
   <script src="../js/script.js" defer></script>
 </body>
 
