Specific Listing page updated and variables incorporated in all pages

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -24,10 +24,16 @@
     <div class="about-wrapper">
 
         <main>
-            <div class="about-content1">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa?
-                    Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
-                <img src="https://picsum.photos/500/500?random=11">
+            <div class="about-content1-wrapper">
+                <div class="about-content1">
+                    <div class="about-content1-content">
+                        <h1>Genique</h1>
+                        <h2>Home Genie</h2>
+                        <p>Your Wishes, our Command !!</p>
+                        <button type="button">Explore More</button>
+                    </div>
+                    <img src="https://picsum.photos/500/500?random=11">
+                </div>
             </div>
             <div class="desktop-grid">
                 <div class="about-vision">
@@ -63,35 +69,37 @@
                     </div>
                 </div>
             </div>
-            <h2>Our Team</h2>
-            <div class="about-team">
-                <div class="about-team-image1">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Project Manager</p>
-                </div>
-                <div class="about-team-image2">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Designer 1</p>
-                </div>
-                <div class="about-team-image3">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Design Lead</p>
-                </div>
-                <div class="about-team-image4">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Designer 2</p>
-                </div>
-                <div class="about-team-image5">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Developer 1</p>
-                </div>
-                <div class="about-team-image6">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Developer Lead</p>
-                </div>
-                <div class="about-team-image7">
-                    <img src="https://picsum.photos/200/200?random=11" alt="">
-                    <p>Developer 2</p>
+            <div class="about-team-wrapper">
+                <h2>Our Team</h2>
+                <div class="about-team">
+                    <div class="about-team-image1">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Project Manager</p>
+                    </div>
+                    <div class="about-team-image2">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Designer 1</p>
+                    </div>
+                    <div class="about-team-image3">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Design Lead</p>
+                    </div>
+                    <div class="about-team-image4">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Designer 2</p>
+                    </div>
+                    <div class="about-team-image5">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Developer 1</p>
+                    </div>
+                    <div class="about-team-image6">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Developer Lead</p>
+                    </div>
+                    <div class="about-team-image7">
+                        <img src="https://picsum.photos/200/200?random=11" alt="">
+                        <p>Developer 2</p>
+                    </div>
                 </div>
             </div>
         </main>
