--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -23,92 +23,97 @@
         <div class="specific-wrapper">
             <div class="specific-heading">
                 <h1>Hair Styling</h1>
-                <p><b>Price: $45.00</b></p>
+                <p><strong>Price: $45.00</strong></p>
             </div>
 
-            <div class="specific-grid">
-                <div class="specific-image">
-                    <img src="https://picsum.photos/400/200?random=11" alt="">
+            <div class="specific-color-top">
+                <div class="specific-grid">
+                    <div class="specific-image">
+                        <img src="https://picsum.photos/400/200?random=11" alt="">
+                    </div>
+                    <div class="specific-contact-info">
+                        <h2>Contact Information</h2>
+                        <p><strong>Name: </strong>Jack Smith</p>
+                        <p><strong>Email: </strong>jacksmith@gmail.com</p>
+                        <p><strong>Contact Number: </strong>+1 604-112-2211</p>
+                        <p><strong>Condition</strong>(if applicable): Use Loreal products only</p>
+                    </div>
                 </div>
-                <div class="specific-contact-info">
-                    <h2>Contact Information</h2>
-                    <p><b>Name: </b>Jack Smith</p>
-                    <p><b>Email: </b>jacksmith@gmail.com</p>
-                    <p><b>Contact Number: </b>+1 604-112-2211</p>
-                    <p><b>Condition</b>(if applicable): Use Loreal products only</p>
+                <div class="specific-desc">
+                    <p>I am looking for a Hair Stylist to help me try different looks for a photoshoot coming this Sunday. Looking for professionals with some experience in Hair Styles for Editorial Purposes and photo ready look. Serious Enquires only can Email or Contact at above provided details.</p>
                 </div>
             </div>
 
-            <div class="specific-desc">
-                <p>I am looking for a Hair Stylist to help me try different looks for a photoshoot coming this Sunday. Looking for professionals with some experience in Hair Styles for Editorial Purposes and photo ready look. Serious Enquires only can Email or Contact at above provided details.</p>
-            </div>
+           
 
-            <div class="specific-bids">
-                <div class="specific-bid1">
-                    <div class="specific-bid-grid">
-                        <img src="https://picsum.photos/300/200?random=11" alt="">
-                        <div class="specific-bid-info">
-                            <p><b>Bidded Price: </b><span class="specific-red">$ 35.00</span></p>
-                            <p><b>Name: </b>Nikkie Watson</p>
-                            <p><b>Email: </b>nikki@gmail.com</p>
-                            <p><b>Phone Number: </b>+1 111-111-1111</p>   
+            <div class="specific-color-bottom">
+                <div class="specific-bids">
+                    <div class="specific-bid1">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 35.00</span></p>
+                                <p><strong>Name: </strong>Nikkie Watson</p>
+                                <p><strong>Email: </strong>nikki@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>   
+                            </div>
+                            <p><strong>Description: </strong>6 years eperience as a Professional Hairstylist. Working Currently at Poco Beauty Salon.</p>
                         </div>
-                        <p><b>Description: </b>6 years eperience as a Professional Hairstylist. Working Currently at Poco Beauty Salon.</p>
-                    </div>
-                    <div class="specific-button-grid">
-                        <button type="button">Accept</button>
-                        <button type="button">Decline</button>
-                    </div>
-                </div>
-                <div class="specific-bid2">
-                    <div class="specific-bid-grid">
-                        <img src="https://picsum.photos/300/200?random=11" alt="">
-                        <div class="specific-bid-info">
-                            <p><b>Bidded Price: </b><span class="specific-red">$ 38.00</span></p>
-                            <p><b>Name: </b>Anna Johnson</p>
-                            <p><b>Email: </b>anna@gmail.com</p>
-                            <p><b>Phone Number: </b>+1 111-111-1111</p>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
                         </div>
-                        <p><b>Description: </b> 7 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist for Dream Editorials.</p>
                     </div>
-                    <div class="specific-button-grid">
-                        <button type="button">Accept</button>
-                        <button type="button">Decline</button>
-                    </div>
-                </div>
-                <div class="specific-bid3">
-                    <div class="specific-bid-grid">
-                        <img src="https://picsum.photos/300/200?random=11" alt="">
-                        <div class="specific-bid-info">
-                            <p><b>Bidded Price: </b><span class="specific-red">$ 40.00</span></p>
-                            <p><b>Name: </b>Troy Smith</p>
-                            <p><b>Email: </b>troy@gmail.com</p>
-                            <p><b>Phone Number: </b>+1 111-111-1111</p>
+                    <div class="specific-bid2">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 38.00</span></p>
+                                <p><strong>Name: </strong>Anna Johnson</p>
+                                <p><strong>Email: </strong>anna@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
+                            </div>
+                            <p><strong>Description: </strong>7 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist for Dream Editorials.</p>
                         </div>
-                        <p><b>Description: </b>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
-                    </div>
-                    <div class="specific-button-grid">
-                        <button type="button">Accept</button>
-                        <button type="button">Decline</button>
-                    </div>
-                </div>
-                <div class="specific-bid3">
-                    <div class="specific-bid-grid">
-                        <img src="https://picsum.photos/300/200?random=11" alt="">
-                        <div class="specific-bid-info">
-                            <p><b>Bidded Price: </b><span class="specific-red">$ 40.00</span></p>
-                            <p><b>Name: </b>Troy Smith</p>
-                            <p><b>Email: </b>troy@gmail.com</p>
-                            <p><b>Phone Number: </b>+1 111-111-1111</p>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
                         </div>
-                        <p><b>Description: </b>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
                     </div>
-                    <div class="specific-button-grid">
-                        <button type="button">Accept</button>
-                        <button type="button">Decline</button>
+                    <div class="specific-bid3">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 40.00</span></p>
+                                <p><strong>Name: </strong>Troy Smith</p>
+                                <p><strong>Email: </strong>troy@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
+                            </div>
+                            <p><strong>Description: </strong>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
+                        </div>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
+                        </div>
                     </div>
-                </div>
-            </div> 
+                    <div class="specific-bid3">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 40.00</span></p>
+                                <p><strong>Name: </strong>Troy Smith</p>
+                                <p><strong>Email: </strong>troy@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
+                            </div>
+                            <p><strong>Description: </strong>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
+                        </div>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
+                        </div>
+                    </div>
+                </div> 
+            </div>
         </div>
     </main>
     <footer></footer>
