--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -70,35 +70,45 @@
                 </div>
             </div>
             <div class="about-team-wrapper">
-                <h2>Our Team</h2>
                 <div class="about-team">
-                    <div class="about-team-image1">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Project Manager</p>
+                    <div class="about-manager">
+                        <h2>Our Team</h2>
+                        <div class="about-team-image1">
+                            <img src="https://picsum.photos/200/200?random=11" alt="">
+                            <p>Project Manager</p>
+                        </div>
                     </div>
-                    <div class="about-team-image2">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Designer 1</p>
-                    </div>
-                    <div class="about-team-image3">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Design Lead</p>
-                    </div>
-                    <div class="about-team-image4">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Designer 2</p>
-                    </div>
-                    <div class="about-team-image5">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Developer 1</p>
-                    </div>
-                    <div class="about-team-image6">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Developer Lead</p>
-                    </div>
-                    <div class="about-team-image7">
-                        <img src="https://picsum.photos/200/200?random=11" alt="">
-                        <p>Developer 2</p>
+                    <div class="about-team-subdiv">
+                        <div class="about-designers">
+                            <h3>Designers</h3>
+                            <div class="about-team-image2">
+                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <p>Designer 1</p>
+                            </div>
+                            <div class="about-team-image3">
+                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <p>Design Lead</p>
+                            </div>
+                            <div class="about-team-image4">
+                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <p>Designer 2</p>
+                            </div>
+                        </div>
+                        <div class="about-developers">
+                            <h3>Developers</h3>
+                            <div class="about-team-image5">
+                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <p>Developer 1</p>
+                            </div>
+                            <div class="about-team-image6">
+                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <p>Developer Lead</p>
+                            </div>
+                            <div class="about-team-image7">
+                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <p>Developer 2</p>
+                            </div>
+                        </div>        
                     </div>
                 </div>
             </div>
