--- a/html_Files/Listing.html
+++ b/html_Files/Listing.html
@@ -16,31 +16,6 @@
 
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <script>
-        // does the browser support service workers?
-        if ('serviceWorker' in navigator) {
-            // fires when the service worker is ready
-            navigator.serviceWorker.ready.then(reg => {
-                // we have an active service worker working for us
-                console.log(`Service Worker ready (Scope: ${reg.scope})`);
-                // do something interesting, if you want...
-
-            });
-            // then register our service worker
-            navigator.serviceWorker.register('.././sw.js', { scope: '/' })
-                .then(function (reg) {
-                    // display a success message
-                    console.log(`Service Worker Registration (Scope: ${reg.scope})`);
-                })
-                .catch(function (error) {
-                    // display an error message
-                    console.log(`Service Worker Error (${error})`);
-                });
-        } else {
-            // happens when the app isn't served over a TLS connection (HTTPS)
-            console.warn('Service Worker not available');
-        }
-    </script>
 </head>
 
 <body>
@@ -103,23 +78,27 @@
         <ul>
             <!-- Add Links to the Pages when created -->
             <li>
-                <a href="BrowseListings.html">Browse Listings</a>
+                <a href="index.html"><i class="fas fa-home"></i> Home</a>
             </li>
             <li>
-                <a href="#"> Create New Listing</a>
+                <a href="BrowseListings.html"><i class="fas fa-browser"></i><i class="fa fa-list"
+                        aria-hidden="true"></i> Browse Listings</a>
             </li>
             <li>
-                <a href="#">View Your Listing</a>
+                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
             </li>
             <li>
-                <a href="AboutUs.html">About Us</a>
+                <a href="#"><i class="fas fa-eye"></i> View Your Listing</a>
+            </li>
+            <li>
+                <a href="AboutUs.html"><i class="fa fa-users" aria-hidden="true"></i> About Us</a>
             </li>
             <li>
                 <a href="UpdateProfile.html">
-                    Profile</a>
+                    <i class="fa fa-user" aria-hidden="true"></i> Profile</a>
             </li>
             <li>
-                <a href="Login.html"><strong>Logout?</strong></a>
+                <a href="Login.html"><strong><i class="fas fa-eye"></i> Logout?</strong></a>
             </li>
         </ul>
     </nav>
@@ -183,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <div class="OwnerListingPage">
+        <!-- <div class="OwnerListingPage">
             <h2 id="OwnListing_Title"></h2>
             <div class="card">
                 <img src="https://picsum.photos/500/250?random=11" alt="random image">
@@ -217,8 +196,45 @@
                     <a href="#" class="browseBtn">View Listing</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
+    <footer class="footer_Area">
+        <div class="mb_footer">
+            <p> &copy; Geniques 2022 </p>
+        </div>
+        <div class="dk_footer">
+            <div class="about-logo">
+                <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+            </div>
+            <div class="about-footer-nav1">
+                <nav>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Create New Listing</a></li>
+                        <li><a href="#">View Your Listing</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="about-footer-nav2">
+                <nav>
+                    <ul>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="about-footer-nav3">
+                <nav>
+                    <ul>
+                        <li><a href="#">Let's Get Connected !!</a></li>
+                        <li><a href="#">+1 1234567890</a></li>
+                        <li><a href="#">abc@homegenie.ca</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
 
     <script src="../js/script.js" defer></script>
     <script src="../js/listing_script.js" defer></script>
