Added team member's images to about us page

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -74,7 +74,7 @@
                     <div class="about-manager">
                         <h2>Our Team</h2>
                         <div class="about-team-image1">
-                            <img src="https://picsum.photos/200/200?random=11" alt="">
+                            <img src="../img/Shubham.jpg" alt="Team Manager's Pic" width="150px" height="200px"> 
                             <p>Project Manager</p>
                         </div>
                     </div>
@@ -82,30 +82,30 @@
                         <div class="about-designers">
                             <h3>Designers</h3>
                             <div class="about-team-image2">
-                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <img src="../img/Manpreet.jpeg" alt="Designer's Pic"  width="150px" height="200px">
                                 <p>Designer 1</p>
                             </div>
                             <div class="about-team-image3">
-                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <img src="../img/Anmol.JPG" alt="Design Lead's Pic"  width="150px" height="200px">
                                 <p>Design Lead</p>
                             </div>
                             <div class="about-team-image4">
-                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <img src="../img/Satveer.jpg" alt="Designer's Pic"  width="150px" height="200px">
                                 <p>Designer 2</p>
                             </div>
                         </div>
                         <div class="about-developers">
                             <h3>Developers</h3>
                             <div class="about-team-image5">
-                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <img src="../img/Tanya.jpg" alt="Developer's Pic"  width="150px" height="200px">
                                 <p>Developer 1</p>
                             </div>
                             <div class="about-team-image6">
-                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <img src="../img/Parminder.png" alt="Developer Lead's Pic"  width="150px" height="200px">
                                 <p>Developer Lead</p>
                             </div>
                             <div class="about-team-image7">
-                                <img src="https://picsum.photos/200/200?random=11" alt="">
+                                <img src="../img/Lakshita.jpg" alt="Developer's Pic"  width="150px" height="200px">
                                 <p>Developer 2</p>
                             </div>
                         </div>        
